--- a/src/Common/style.scss
+++ b/src/Common/style.scss
@@ -1,3 +1,15 @@
 .form__error {
     color: red;
 }
+
+.outer {
+    min-height: 100vh;
+    background-color: #ccc;
+}
+
+.container {
+    min-height: 100vh;
+    max-width: 1200px;
+    margin: 0 auto;
+    background-color: #fff;
+}
