--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'PT Sans', sans-serif;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
