--- a/src/Common/CustomInputs/Number/NumberInput.module.scss
+++ b/src/Common/CustomInputs/Number/NumberInput.module.scss
@@ -7,6 +7,7 @@
     width: 60px ;
     height: 38px;
     font-size: 16px;
+    color: #495057;
     outline: none;
     border-radius: 4px;
     background-color: transparent;
