--- a/src/Common/style.scss
+++ b/src/Common/style.scss
@@ -1,5 +1,6 @@
 .form__error {
     color: red;
+    position: absolute;
 }
 
 .outer {
@@ -11,6 +12,5 @@
     min-height: 100vh;
     max-width: 1200px;
     margin: 0 auto;
-    background-color: #fff;
     padding-bottom: 30px;
 }
