--- a/src/Common/style.scss
+++ b/src/Common/style.scss
@@ -15,3 +15,12 @@
     margin: 0 auto;
     padding-bottom: 30px;
 }
+
+//.recharts-wrapper,
+//.recharts-responsive-container,
+//.recharts-surface {
+//    @media print {
+//        width: 100vw !important;
+//    }
+//}
+//
