--- a/src/Components/Container/Graphic/Graphic.module.scss
+++ b/src/Components/Container/Graphic/Graphic.module.scss
@@ -1,5 +1,5 @@
 .gr {
-    width: 1200px !important;
+    width: 1000px !important;
     height: 500px !important;
 }
 
@@ -15,7 +15,8 @@
 }
 
 .graphicContainer {
-    display: flex;
+    //display: flex;
+    //width: 100%;
 }
 
 .information {
@@ -42,6 +43,12 @@
     margin-right: 10px;
 }
 
+.vacation:before {
+    @media print {
+        border: 1px solid #f66a69;
+            }
+}
+
 .legendItem {
     display: grid;
     grid-template-columns: 1fr 1fr 5fr;
@@ -55,6 +62,7 @@
     height: 18px !important;
     border-radius: 15px;
     padding: 0 !important;
+    border:1px solid black;
 }
 
 .tableContainer {
@@ -119,8 +127,21 @@
     font-size: 12px;
 }
 
-@media (max-width: 1000px) {
-    .gr {
-        width: 100vw !important;
-    }
-}
+//@media (max-width: 1000px) {
+//    .gr {
+//        width: 100vw !important;
+//    }
+//}
+//
+//.gr {
+//    @media print {
+//        width: 100vw !important;
+//    }
+//}
+
+
+//.graphicContainer {
+//    @media print {
+//        width: 100vw !important;
+//    }
+//}
