--- a/src/Components/Container/Salary/Salary.module.scss
+++ b/src/Components/Container/Salary/Salary.module.scss
@@ -121,6 +121,7 @@
     background-color: #176eb5;
     transition: all 0.4s ease;
     margin-bottom: 30px;
+    margin-left: 15px;
 }
 
 .submitBtn:hover {
