added bachelor and statuses graduate and go to university

--- a/src/Components/Container/Salary/Salary.module.scss
+++ b/src/Components/Container/Salary/Salary.module.scss
@@ -4,7 +4,7 @@
     grid-column-gap: 30px;
     grid-row-gap: 15px;
     margin-bottom: 30px;
-    max-width: 920px;
+    //max-width: 920px;
 }
 
 .title {
@@ -64,7 +64,7 @@
 
 .selectCourse {
     padding: 0 15px;
-    width: 60px;
+    width: 121px;
     height: 38px;
 }
 
