added inputs adaptive

--- a/src/Common/CustomInputs/Date/DateInput.module.scss
+++ b/src/Common/CustomInputs/Date/DateInput.module.scss
@@ -49,3 +49,14 @@
     bottom: 0;
     margin: auto;
 }
+
+@media (max-width: 380px) {
+    .date {
+        width: 123px;
+    }
+    .calendar {
+        right: 11px;
+        //left: 0;
+        //right: 0;
+    }
+}
