--- a/src/Common/style.scss
+++ b/src/Common/style.scss
@@ -3,7 +3,8 @@
     font-size: 12px;
     align-items: center;
     display: flex;
-    margin-right: 36px;
+    margin-right: 35px;
+    font-weight: 400;
 }
 
 .outer {
@@ -64,5 +65,23 @@
     @media print {
         width: 1000px !important;
         height: 500px !important;
+    }
+}
+
+@media (max-width: 830px) {
+    .form__error {
+        width: 230px;
+    }
+}
+@media (max-width: 480px) {
+    .form__error {
+        width: 230px;
+        margin-right: 20px;
+    }
+}
+@media (max-width: 380px) {
+    .form__error {
+        margin-right: 0;
+        font-size: 10px;
     }
 }
