--- a/src/Components/Container/Salary/Salary.module.scss
+++ b/src/Components/Container/Salary/Salary.module.scss
@@ -1,9 +1,13 @@
 .form {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    //grid-template-columns: 1fr 1fr;
     grid-column-gap: 30px;
     grid-row-gap: 24px;
     margin-bottom: 30px;
+    grid-template-areas:
+        "status register"
+        "course birthday"
+        "experience dissertation";
 }
 
 .title {
@@ -27,6 +31,7 @@
     margin-right: calc(5px + .2em);
 }
 .title span {
+    white-space: nowrap;
     color: #888;
 }
 
@@ -40,7 +45,7 @@
 .label {
     color: #495057;
     font-size: 14px;
-
+    font-weight: 400;
 }
 
 .labelRight {
@@ -53,7 +58,7 @@
     grid-column-gap: 13px;
     align-items: center;
     display: grid;
-    grid-template-columns: 250px max-content;
+    grid-template-columns: 251px max-content;
 }
 
 .selectStatus {
@@ -154,4 +159,110 @@
     text-decoration: underline;
     border-radius: 10px;
     cursor: pointer;
+}
+
+.status {
+    grid-area: status;
+}
+
+.register {
+    grid-area: register;
+}
+
+.course {
+    grid-area: course;
+}
+
+.birthday {
+    grid-area: birthday;
+}
+
+.experience {
+    grid-area: experience;
+}
+
+.dissertation {
+    grid-area: dissertation;
+}
+
+@media (max-width: 830px) {
+    .form {
+       grid-template-areas:
+        "status"
+        "course"
+        "experience"
+        "register"
+        "birthday"
+        "dissertation"
+    ;
+    }
+    .labelRight {
+        text-align: left;
+    }
+
+}
+@media (max-width: 830px) {
+    .error {
+        width: 387px;
+        justify-content: space-between;
+    }
+}
+@media (max-width: 650px) {
+    .title {
+        font-size: 22px;
+    }
+}
+
+@media (max-width: 480px) {
+    .title {
+        font-size: 18px;
+        margin-bottom: 20px;
+    }
+    .label {
+        font-size: 12px;
+    }
+    .section {
+        grid-template-columns: 215px max-content;
+    }
+    .submitBtn {
+        display: block;
+        margin: 40px auto 10px;
+    }
+    .error {
+        justify-content: flex-start;
+        width: calc(100vw - 20px);
+    }
+}
+@media (max-width: 380px) {
+    .title {
+        font-size: 18px;
+        margin-bottom: 20px;
+        padding-top: 15px;
+    }
+    .label {
+        margin-bottom: 10px;
+    }
+    .arrows {
+        top: auto;
+        left: 0;
+        right: 0;
+        height: 38px;
+    }
+    .section {
+        grid-template-columns: 215px;
+    }
+
+    .error {
+        justify-content: flex-start;
+        flex-direction: column;
+    }
+
+    .defaultBtn {
+        text-align: center;
+        position: absolute;
+        width: calc(100vw - 143px);
+        top: -30px;
+        right: 0;
+        margin-right: 0;
+    }
 }
