fixed calendar in mobile

--- a/src/Components/Container/Salary/Salary.module.scss
+++ b/src/Components/Container/Salary/Salary.module.scss
@@ -239,7 +239,7 @@
     }
     .submitBtn {
         display: block;
-        margin: 30px auto 20px;
+        margin: 30px auto;
     }
     .error {
         justify-content: flex-start;
