--- a/src/Common/CustomInputs/Date/DateInput.module.scss
+++ b/src/Common/CustomInputs/Date/DateInput.module.scss
@@ -7,7 +7,7 @@
     border-radius: 4px;
     border: solid 1px #ced4da;
     background-color: transparent;
-    padding: 7px 15px;
+    padding: 7px 10px;
     outline: none;
     font-size: 14px;
     color: #495057;
@@ -30,6 +30,7 @@
 
 .dateInput::-webkit-calendar-picker-indicator {
     opacity: 0;
+    background: transparent;
     position: absolute;
     top: 0;
     right: 5px;
